@@ -1,3 +1,12 @@
+2014-10-20  Csaba Osztrogonác  <ossy@webkit.org>
+
+        [cmake] Remove duplicated source files
+        https://bugs.webkit.org/show_bug.cgi?id=137875
+
+        Reviewed by Gyuyoung Kim.
+
+        * CMakeLists.txt:
+
 2014-10-18  Brian J. Burg  <burg@cs.washington.edu>
 
         Web Replay: code generator shouldn't complain about enums without a storage type if they are in an enclosing scope
